# pr-descriptor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
pr_writer/: ai_client.py  cli.py  git_utils.py  platforms.py  setup_wizard.py
